# praxis

./: .env.example  .gitignore  README.md  RELATORIO-CRAFT-2.md
backend/: pyproject.toml
backend/acervo/: manifest.toml
backend/app/: authz.py  config.py  db.py  deps.py  main.py  pdftimbre.py  pdfutils.py
backend/app/assinatura/: pades.py
backend/app/casos/: pts.py
backend/app/conformidade/: ia_cfp.py
backend/app/documentos/: gerador.py  pdf.py  substituir.py  templates.py
backend/app/financeiro/: recibo_pdf.py
backend/app/instrumentos/: geradores.py  pdf.py  scoring.py  seed.py
backend/app/laudos/: nr1.py
backend/app/middleware/: audit.py
backend/app/models/: __init__.py  acervo.py  audit.py  auth_throttle.py  caso.py  certificado.py  grupo.py  (+19 more)
backend/migrations/: 001_extensions_and_tenants.sql  002_clinical.sql  003_audit.sql  004_acervo_e_sofia.sql  005_scribe.sql  006_instrumentos.sql  007_roteiros_sessao.sql  008_documentos_cfp.sql  010_supervisao.sql  011_assinatura_icp.sql  012_financeiro.sql  013_telessessao.sql  014_consentimento_uso_ia.sql  015_sofia_historico.sql  016_timbre_profissional.sql  017_consentimento_revogacao.sql  018_auth_throttle.sql  019_crp_verificado.sql  020_revogacao_sessao.sql  021_avaliacao_risco.sql  022_caso_pts.sql  023_encontros_grupo.sql  024_membros_rede.sql  025_matriciamento.sql  026_laudo_nr1.sql  027_posvencao.sql  028_caso_compartilhado.sql  run_migrations.py
backend/scripts/: funil_ativacao.py  ingest_acervo.py
backend/tests/: conftest.py  test_auth_2fa.py  test_caso_compartilhado.py  test_caso_pts.py  test_consentimento.py  test_crp.py  test_crypto.py  test_grupos.py  test_instrumento_rd.py  test_laudo_nr1.py  test_matriciamento.py  test_posvencao.py  test_professional_isolation.py  test_rede.py  test_revogacao_sessao.py  test_risco.py  test_scribe_audio.py  test_scribe_dialogico.py  test_tenant_isolation.py  test_throttle.py
(+154 files in other folders)
