[project]
name = "praxis-backend"
version = "0.1.0"
description = "Práxis (by CENAT) — copiloto clínico. Backend FastAPI async."
readme = "../README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.128.*",
    "uvicorn[standard]>=0.32,<0.36",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
    "pyotp>=2.9,<3",
    "cryptography>=43,<45",
    "python-multipart>=0.0.20",
    "email-validator>=2.2,<3",
    "qrcode[pil]>=8.0,<9",
    "openai>=1.55,<2",
    "pymupdf>=1.24,<2",
    "pgvector>=0.3.6,<0.4",
    "tiktoken>=0.8,<1",
    "httpx>=0.27,<0.29",
    "psycopg2-binary>=2.9,<3",
]

[tool.uv]
package = false
